--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
         </ul>
       </div>
     </nav>
+
+    <!-- Hero Section  -->
+
+    <div class="hero" id="home">
+      <div class="hero__container">
+        <h1 class="heo__heading">Choose your <span>colors</span></h1>
+        <p class="hero__description">Unilimited Possibilities</p>
+        <button class="main__btn"><a href="#">Explore</a></button>
+      </div>
+    </div>
+
     <script src="./app.js"></script>
   </body>
 </html>
