--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <div class="hero" id="home">
       <div class="hero__container">
-        <h1 class="heo__heading">Choose your <span>colors</span></h1>
+        <h1 class="hero__heading">Choose your <span>colors</span></h1>
         <p class="hero__description">Unilimited Possibilities</p>
         <button class="main__btn"><a href="#">Explore</a></button>
       </div>
