--- a/index.html
+++ b/index.html
@@ -46,6 +46,22 @@
       </div>
     </div>
 
+    <!-- About section -->
+
+    <div class="main" id="about">
+      <div class="main__container">
+        <div class="main__img--container">
+          <div class="main__img--card">ICON</div>
+        </div>
+        <div class="main__content">
+          <h1>What do we do?</h1>
+          <h2>We help businesses scale</h2>
+          <p>Schedule a call to learn more about our services</p>
+          <button class="main__btn"><a href="#">Scedule Call</a></button>
+        </div>
+      </div>
+    </div>
+
     <script src="./app.js"></script>
   </body>
 </html>
