--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <h1>What do we do?</h1>
           <h2>We help businesses scale</h2>
           <p>Schedule a call to learn more about our services</p>
-          <button class="main__btn"><a href="#">Scedule Call</a></button>
+          <button class="main__btn"><a href="#">Schedule Call</a></button>
         </div>
       </div>
     </div>
