--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Scroll Website</title>
     <link rel="stylesheet" href="./style.css" />
+    <script
+      src="https://kit.fontawesome.com/1736cc03f1.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <!-- Navbar Section -->
@@ -51,7 +55,7 @@
     <div class="main" id="about">
       <div class="main__container">
         <div class="main__img--container">
-          <div class="main__img--card">ICON</div>
+          <div class="main__img--card"><i class="fas fa-layer-group"></i></div>
         </div>
         <div class="main__content">
           <h1>What do we do?</h1>
