Add Services Section to HTML

--- a/index.html
+++ b/index.html
@@ -66,6 +66,34 @@
       </div>
     </div>
 
+    <!-- Service Section -->
+
+    <div class="services" id="services">
+      <h1>Our Services</h1>
+      <div class="services__wrapper">
+        <div class="services__card">
+          <h2>Custom Colorways</h2>
+          <p>AI Powered technology</p>
+          <button class="services__btn">Get Started</button>
+        </div>
+        <div class="services__card">
+          <h2>Are you Ready?</h2>
+          <p>Take the lepa</p>
+          <button class="services__btn">Get Started</button>
+        </div>
+        <div class="services__card">
+          <h2>Full Gradients</h2>
+          <p>100 Combinations</p>
+          <button class="services__btn">Get Started</button>
+        </div>
+        <div class="services__card">
+          <h2>Infinite Choices</h2>
+          <p>1000's of colors</p>
+          <button class="services__btn">Get Started</button>
+        </div>
+      </div>
+    </div>
+
     <script src="./app.js"></script>
   </body>
 </html>
