--- a/index.html
+++ b/index.html
@@ -94,6 +94,22 @@
       </div>
     </div>
 
+    <!-- Features Section -->
+
+    <div class="main" id="sign-up">
+      <div class="main__container">
+        <div class="main__content">
+          <h1>Join Our Team</h1>
+          <h2>Sign UP Today</h2>
+          <p>See whatmakes us different</p>
+          <button class="main__btn"><a href="#">Sign Up</a></button>
+        </div>
+        <div class="main__img--container">
+          <div class="main__img--card"><i class="fas fa-users"></i></div>
+        </div>
+      </div>
+    </div>
+
     <script src="./app.js"></script>
   </body>
 </html>
