--- a/index.html
+++ b/index.html
@@ -105,7 +105,9 @@
           <button class="main__btn"><a href="#">Sign Up</a></button>
         </div>
         <div class="main__img--container">
-          <div class="main__img--card"><i class="fas fa-users"></i></div>
+          <div class="main__img--card" id="card-2">
+            <i class="fas fa-users"></i>
+          </div>
         </div>
       </div>
     </div>
